2012-03-19  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/mcs/NewBaseDispatcher.h: Move message_dispatcher out ouf dispatcher.
	Now use it at the call of startup().
	* src/network/NewThreadFactory.cpp: Likewise.
	* src/network/NewServer.cpp: Likewise.
	* include/mcs/RequestDispatcher.h: Likewise.
	* include/mcs/NewOutputDispatcher.h: Likewise.
	* include/mcs/NewJoinerDispatcher.h: Likewise.

	* src/network/NewNeighborThread.cpp: Clean up.

	* src/dmcs/DLVEvaluator.cpp: Nice log messages.
	* src/mcs/NewContext.cpp: Likewise.
	* src/mcs/StreamingJoiner.cpp: Likewise.
	* src/network/NewNeighborOut.cpp: Likewise.
	* src/network/NewOutputThread.cpp: Likewise.
	* src/network/NewServer.cpp: Likewise.
	* src/parser/DLVResultParser.cpp: Likewise.

	* include/network/NewHandler.h: Simplify handle_finalize.
	* src/network/NewHandler.cpp: Likewise.

	* testsuite/testSystem.cpp: Add testcase for intermediate contexts.

	* testsuite/DmcsClientTest.cpp: Fix input to shutdown query.

	* src/mcs/BeliefStateOffset.cpp: Disable assertion.

	* src/mcs/BackwardMessage.cpp: Fix print().

	* include/network/NewServer.h: Initialize threads at construction time.
	* src/network/NewServer.cpp: Likewise.

	* include/network/NewConcurrentMessageDispatcher.h: New method for create and register an mq.
	* src/network/NewConcurrentMessageDispatcher.cpp: Likewise.

	* include/network/NewThreadFactory.h: New file.
	* src/network/NewThreadFactory.cpp: Likewise.

	* include/network/Makefile.am: Add NewThreadFactory.h
	* src/network/Makefile.am: Add NewThreadFactory.cpp.

	* include/network/HandlerWrapper.h: Minimize parameters passed.

	* include/mcs/Registry.h: Add lots of information into the Regitry.

	* include/mcs/QueryID.h: Add unset_neighbor_id().

	* include/mcs/NewJoinerDispatcher.h: Create wrapper.
	* include/network/NewNeighborThread.h: Likewise.
	* src/network/NewNeighborThread.cpp: Likewise.

	* include/mcs/NewContext.h: Let joiner initialize the offset-index mapping